<?xml version="1.0"?>
<package format="2">
  <name>vortex_TUI</name>
  <version>1.0.0</version>
  <description>Vortex TUI package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="benji@todo.todo">Benjamin</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>simulator_launch</exec_depend>

</package>

